tests/incremental_non_flow_move/incremental_non_flow_move.exp

Initial status:
No errors!

Delete non-@flow file foo.js:
Error ------------------------------------------------------------------------------------------------------ test.js:5:9

Cannot resolve module `Foo`. [cannot-resolve-module]

   5| require('Foo');
              ^^^^^



Found 1 error

Restore non-@flow file foo.js:
No errors!

Done!
